<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/entry_title_sign_in"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibtn_apple"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_imageview_loginpage"
                android:scaleType="fitCenter"
                android:src="@drawable/apple" />

            <ImageButton
                android:id="@+id/ibtn_twitter"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_imageview_loginpage"
                android:scaleType="fitCenter"
                android:src="@drawable/twitter" />

            <ImageButton
                android:id="@+id/ibtn_facebook"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_imageview_loginpage"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook" />

            <ImageButton
                android:id="@+id/ibtn_gmail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_imageview_loginpage"
                android:scaleType="fitCenter"
                android:src="@drawable/gmail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="3"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="3"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_button_checked"
                android:checked="true"
                android:text="@string/phone_number"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_button_checked"
                android:text="@string/email"
                android:textColor="@color/black" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phoneAndEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone_and_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="+2001012345678"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="0dp"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="123456"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/login_btn"
            android:text="@string/sign_in"
            android:textColor="@color/app_background"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/have_no_account"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/signup_btn"
            android:text="@string/sign_up"
            android:textColor="@color/app_background" />

        <FrameLayout
            android:id="@+id/progressbar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            >

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>


    </LinearLayout>


</ScrollView>
